--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <link rel="stylesheet" href="stylesheet.css">
-    <meta charset="utf-8">
-    <title>Progate</title>
+    <meta charset="UTF-8">
+    <title>Webサイトのタイトル</title>
+    <meta name="description" content="ページの紹介文">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
+<!-- CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
+ 
+  
   <body>
-    <h1 class="title">HTML & CSS の開発環境を用意しよう！</h1>
-    <p>自分のPCでWebページを開発する方法をを学習しましょう</p>
+    <!-- ここにコンテンツが入ります -->
   </body>
 </html>
